<resources>
    <string name="app_name">MvpDemos</string>
    <string name="str_login">登录</string>
    <string name="str_pls_input_username">请输入用户名</string>
    <string name="str_pls_input_pwd">请输入密码</string>
    <string name="str_pls_input_pwd_repeat">请再次输入密码</string>


    <string name="loading_text">加载中&#8230;</string>
    <string name="no_network">请检查网络后点击重新加载</string>
    <string name="data_error">数据获取失败(ㄒoㄒ)~~</string>
    <string name="empty_view_hint">暂时木有内容呀~~</string>
    <string name="str_register">注册</string>
</resources>
