<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    tools:context=".LoginActivity">

<!--    多种状态的 View 的切换-->
    <com.classic.common.MultipleStatusView
        android:id="@+id/multipleStatusView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_bg"
        app:emptyView="@layout/layout_empty_view"
        app:errorView="@layout/layout_error_view"
        app:loadingView="@layout/layout_loading_view"
        app:noNetworkView="@layout/layout_network_view">

    </com.classic.common.MultipleStatusView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/etLoginName"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:hint="@string/str_pls_input_username"
            android:layout_height="@dimen/dp40"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"/>
        <EditText
            android:id="@+id/etLoginPwd"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:inputType="textPassword"
            android:hint="@string/str_pls_input_pwd"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:layout_height="@dimen/dp40"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_marginStart="@dimen/dp40"
            android:layout_marginEnd="@dimen/dp40"
            android:layout_marginTop="@dimen/dp30"
            android:background="@drawable/light_blue_button"
            android:text="@string/str_login"
            android:textSize="@dimen/sp18"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="@dimen/dp10"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginStart="@dimen/dp50"
            android:textColor="@color/color_gray"
            android:textSize="@dimen/sp16"
            android:text="@string/str_register"/>

    </LinearLayout>
</RelativeLayout>